// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`duel-event choreography > activate from B2-1 1`] = `
{
  "completedAt": 19,
  "frames": [
    "0 GameCard#0 p1,4,0 r0,0,3.142 s1,1,1 o-1 v1",
    "0 Object3D#1 p1,4,0 r0,0,3.142 s1,1,1 o-1 v1",
    "0 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "1 Object3D#1 p1,4,0.2 r0,0,3.142 s1,1,1 o-1 v1",
    "1 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "2 Object3D#1 p1,4,0.4 r0,0,3.142 s1,1,1 o-1 v1",
    "2 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "3 Object3D#1 p1,4,0.6 r0,0,3.142 s1,1,1 o-1 v1",
    "3 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "4 Object3D#1 p1,4,0.8 r0,0,3.142 s1,1,1 o-1 v1",
    "4 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "5 Object3D#1 p1,4,1 r0,0,3.142 s1,1,1 o-1 v1",
    "5 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "15 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "16 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "17 Object3D#1 p1,4,0.667 r0,0,3.142 s1,1,1 o-1 v1",
    "17 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "18 Object3D#1 p1,4,0.333 r0,0,3.142 s1,1,1 o-1 v1",
    "18 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "19 Object3D#1 p1,4,0 r0,0,3.142 s1,1,1 o-1 v1",
    "19 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
  ],
  "log": [
    "setSelectedCard(1,7,true)",
    "new GameCard(7)",
    "card.destroy",
    "overlay.add(Object3D#1)",
    "CardActivationEffect(delay=-)",
    "scene.add(Modal#2)",
    "enableRenderOverlay",
    "startTask#1",
    "startTask#2",
    "scene.remove(Modal#2)",
    "disableRenderOverlay",
    "onCompleted",
  ],
  "ticks": 21,
}
`;

exports[`duel-event choreography > activate from GY-1 1`] = `
{
  "completedAt": 19,
  "frames": [
    "0 GameCard#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Object3D#1 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "1 Object3D#1 p1,-4,0.2 r0,0,0 s1,1,1 o-1 v1",
    "1 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "2 Object3D#1 p1,-4,0.4 r0,0,0 s1,1,1 o-1 v1",
    "2 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "3 Object3D#1 p1,-4,0.6 r0,0,0 s1,1,1 o-1 v1",
    "3 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "4 Object3D#1 p1,-4,0.8 r0,0,0 s1,1,1 o-1 v1",
    "4 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "5 Object3D#1 p1,-4,1 r0,0,0 s1,1,1 o-1 v1",
    "5 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "15 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "16 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "17 Object3D#1 p1,-4,0.667 r0,0,0 s1,1,1 o-1 v1",
    "17 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "18 Object3D#1 p1,-4,0.333 r0,0,0 s1,1,1 o-1 v1",
    "18 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "19 Object3D#1 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "19 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
  ],
  "log": [
    "setSelectedCard(0,7,true)",
    "new GameCard(7)",
    "card.destroy",
    "overlay.add(Object3D#1)",
    "CardActivationEffect(delay=-)",
    "scene.add(Modal#2)",
    "enableRenderOverlay",
    "startTask#1",
    "startTask#2",
    "scene.remove(Modal#2)",
    "disableRenderOverlay",
    "onCompleted",
  ],
  "ticks": 21,
}
`;

exports[`duel-event choreography > activate from hand (face down false) 1`] = `
{
  "completedAt": 20,
  "frames": [
    "0 handCard#0 p2,-8,0 r0,0,0 s1,1,1 o-1 v0",
    "0 Object3D#1 p2,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "1 Object3D#1 p2,-7.8,0 r0,0,0 s1,1,1 o-1 v1",
    "1 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "2 Object3D#1 p2,-7.6,0 r0,0,0 s1,1,1 o-1 v1",
    "2 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "3 Object3D#1 p2,-7.4,0 r0,0,0 s1,1,1 o-1 v1",
    "3 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "4 Object3D#1 p2,-7.2,0 r0,0,0 s1,1,1 o-1 v1",
    "4 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "5 Object3D#1 p2,-7,0 r0,0,0 s1,1,1 o-1 v1",
    "5 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "15 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "16 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "17 Object3D#1 p2,-7.333,0 r0,0,0 s1,1,1 o-1 v1",
    "17 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "18 Object3D#1 p2,-7.667,0 r0,0,0 s1,1,1 o-1 v1",
    "18 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "19 handCard#0 p2,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "19 Object3D#1 p2,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "19 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
  ],
  "log": [
    "setSelectedCard(0,7,true)",
    "setIsVisible(true)",
    "overlay.add(Object3D#1)",
    "CardActivationEffect(delay=0)",
    "scene.add(Modal#2)",
    "enableRenderOverlay",
    "startTask#1",
    "startTask#2",
    "scene.remove(Modal#2)",
    "disableRenderOverlay",
    "onCompleted",
  ],
  "ticks": 22,
}
`;

exports[`duel-event choreography > activate from hand (face down true) 1`] = `
{
  "completedAt": 26,
  "frames": [
    "0 handCard#0 p2,-8,0 r0,0,0 s1,1,1 o-1 v0",
    "0 Object3D#1 p2,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "1 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "2 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "3 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "4 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "5 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "7 Object3D#1 p2,-7.8,0 r0,0,0 s1,1,1 o-1 v1",
    "8 Object3D#1 p2,-7.6,0 r0,0,0 s1,1,1 o-1 v1",
    "9 Object3D#1 p2,-7.4,0 r0,0,0 s1,1,1 o-1 v1",
    "10 Object3D#1 p2,-7.2,0 r0,0,0 s1,1,1 o-1 v1",
    "11 Object3D#1 p2,-7,0 r0,0,0 s1,1,1 o-1 v1",
    "21 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "22 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "23 Object3D#1 p2,-7.333,0 r0,0,0 s1,1,1 o-1 v1",
    "23 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "24 Object3D#1 p2,-7.667,0 r0,0,0 s1,1,1 o-1 v1",
    "24 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "25 handCard#0 p2,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "25 Object3D#1 p2,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "25 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
  ],
  "log": [
    "setSelectedCard(0,7,true)",
    "setIsVisible(true)",
    "overlay.add(Object3D#1)",
    "CardActivationEffect(delay=0.15)",
    "scene.add(Modal#2)",
    "enableRenderOverlay",
    "startTask#1",
    "startTask#2",
    "scene.remove(Modal#2)",
    "disableRenderOverlay",
    "onCompleted",
  ],
  "ticks": 28,
}
`;

exports[`duel-event choreography > activate on the field 1`] = `
{
  "completedAt": 20,
  "frames": [
    "0 fieldCard#0 p2,-2,0 r0,0,0 s1,1,1 o-1 v0",
    "0 Object3D#1 p2,-2,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "1 Object3D#1 p2,-2,0.2 r0,0,0 s1,1,1 o-1 v1",
    "1 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "2 Object3D#1 p2,-2,0.4 r0,0,0 s1,1,1 o-1 v1",
    "2 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "3 Object3D#1 p2,-2,0.6 r0,0,0 s1,1,1 o-1 v1",
    "3 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "4 Object3D#1 p2,-2,0.8 r0,0,0 s1,1,1 o-1 v1",
    "4 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "5 Object3D#1 p2,-2,1 r0,0,0 s1,1,1 o-1 v1",
    "5 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "15 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.56 v1",
    "16 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.42 v1",
    "17 Object3D#1 p2,-2,0.667 r0,0,0 s1,1,1 o-1 v1",
    "17 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.28 v1",
    "18 Object3D#1 p2,-2,0.333 r0,0,0 s1,1,1 o-1 v1",
    "18 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0.14 v1",
    "19 fieldCard#0 p2,-2,0 r0,0,0 s1,1,1 o-1 v1",
    "19 Object3D#1 p2,-2,0 r0,0,0 s1,1,1 o-1 v1",
    "19 Modal#2 p0,0,0 r0,0,0 s1,1,1 o0 v1",
  ],
  "log": [
    "setSelectedCard(0,7,true)",
    "fieldCard.hideCardStats",
    "overlay.add(Object3D#1)",
    "CardActivationEffect(delay=-)",
    "scene.add(Modal#2)",
    "enableRenderOverlay",
    "startTask#1",
    "startTask#2",
    "scene.remove(Modal#2)",
    "fieldCard.updateCardStats",
    "disableRenderOverlay",
    "onCompleted",
  ],
  "ticks": 22,
}
`;

exports[`duel-event choreography > attack on a face-down monster flips it 1`] = `
{
  "completedAt": 31,
  "frames": [
    "0 attacker#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "0 attacked#1 p4,4,0 r0,3.142,3.142 s1,1,1 o-1 v1",
    "1 attacker#0 p0.951,-4.131,0.084 r0,0,-0.111 s1,1,1 o-1 v1",
    "1 attacked#1 p4,4,0.333 r0,3.142,3.142 s1,1,1 o-1 v1",
    "2 attacker#0 p0.817,-4.487,0.312 r0,0,-0.211 s1,1,1 o-1 v1",
    "2 attacked#1 p4,4,0.667 r0,3.142,3.142 s1,1,1 o-1 v1",
    "3 attacker#0 p0.621,-5.011,0.648 r0,0,-0.29 s1,1,1 o-1 v1",
    "3 attacked#1 p4,4,1 r0,3.142,3.142 s1,1,1 o-1 v1",
    "4 attacker#0 p0.382,-5.648,1.056 r0,0,-0.341 s1,1,1 o-1 v1",
    "4 attacked#1 p4,4,0.667 r-3.142,0.785,0 s1,1,1 o-1 v1",
    "5 attacker#0 p0.122,-6.341,1.5 r0,0,-0.359 s1,1,1 o-1 v1",
    "5 attacked#1 p4,4,0.333 r3.142,1.571,0 s1,1,1 o-1 v1",
    "6 attacker#0 p-0.138,-7.034,1.944 r0,0,-0.359 s1,1,1 o-1 v1",
    "6 attacked#1 p4,4,0 r0,0.785,3.142 s1,1,1 o-1 v1",
    "7 attacker#0 p-0.376,-7.67,2.352 r0,0,-0.359 s1,1,1 o-1 v1",
    "7 attacked#1 p4,4,0 r0,0,3.142 s1,1,1 o-1 v1",
    "8 attacker#0 p-0.573,-8.195,2.688 r0,0,-0.359 s1,1,1 o-1 v1",
    "9 attacker#0 p-0.706,-8.551,2.916 r0,0,-0.359 s1,1,1 o-1 v1",
    "10 attacker#0 p-0.756,-8.682,3 r0,0,-0.359 s1,1,1 o-1 v1",
    "12 attacker#0 p-0.261,-7.363,2.688 r0,0,-0.359 s1,1,1 o-1 v1",
    "13 attacker#0 p0.918,-4.218,1.944 r0,0,-0.359 s1,1,1 o-1 v1",
    "14 attacker#0 p2.326,-0.464,1.056 r0,0,-0.359 s1,1,1 o-1 v1",
    "15 attacker#0 p3.505,2.681,0.312 r0,0,-0.359 s1,1,1 o-1 v1",
    "16 attacker#0 p4,4,0 r0,0,-0.359 s1,1,1 o-1 v1",
    "16 Mesh#2 p4,4,0.2 r0,0,0 s0,0,0 o0 v1",
    "16 Mesh#3 p4,4,0.1 r0,0,0 s0,0,0 o0 v1",
    "16 Mesh#4 p4,4,0.3 r0,0,-2.212 s0.5,0.5,0.5 o0 v1",
    "17 Mesh#2 p4,4,0.2 r0,0,0 s0.25,0.25,0.25 o0.25 v1",
    "17 Mesh#3 p4,4,0.1 r0,0,0 s0.333,0.333,0.333 o0.25 v1",
    "17 Mesh#4 p4,4,0.3 r0,0,-2.212 s0.667,0.667,0.667 o0.5 v1",
    "18 attacker#0 p3.833,3.556,0.064 r0,0,-0.359 s1,1,1 o-1 v1",
    "18 Mesh#2 p4,4,0.2 r0,0,0 s0.5,0.5,0.5 o0.5 v1",
    "18 Mesh#3 p4,4,0.1 r0,0,0 s0.667,0.667,0.667 o0.5 v1",
    "18 Mesh#4 p4,4,0.3 r0,0,-2.212 s0.833,0.833,0.833 o1 v1",
    "19 attacker#0 p3.394,2.384,0.234 r0,0,-0.359 s1,1,1 o-1 v1",
    "19 Mesh#2 p4,4,0.2 r0,0,0 s0.75,0.75,0.75 o0.5 v1",
    "19 Mesh#3 p4,4,0.1 r0,0,0 s1,1,1 o0.5 v1",
    "19 Mesh#4 p4,4,0.3 r0,0,-2.212 s1,1,1 o1 v1",
    "20 attacker#0 p2.773,0.728,0.475 r0,0,-0.359 s1,1,1 o-1 v1",
    "20 Mesh#2 p4,4,0.2 r0,0,0 s1,1,1 o0.5 v1",
    "20 Mesh#3 p4,4,0.1 r0,0,0 s1.125,1.125,1.125 o0.375 v1",
    "20 Mesh#4 p4,4,0.3 r0,0,-2.212 s0.75,0.75,0.75 o0.5 v1",
    "21 attacker#0 p2.061,-1.17,0.75 r0,0,-0.359 s1,1,1 o-1 v1",
    "21 Mesh#3 p4,4,0.1 r0,0,0 s1.25,1.25,1.25 o0.25 v1",
    "21 Mesh#4 p4,4,0.3 r0,0,-2.212 s0.5,0.5,0.5 o0 v1",
    "22 attacker#0 p1.349,-3.069,1.025 r0,0,-0.359 s1,1,1 o-1 v1",
    "22 Mesh#3 p4,4,0.1 r0,0,0 s1.375,1.375,1.375 o0.125 v1",
    "23 attacker#0 p0.728,-4.725,1.266 r0,0,-0.359 s1,1,1 o-1 v1",
    "23 Mesh#3 p4,4,0.1 r0,0,0 s1.5,1.5,1.5 o0 v1",
    "24 attacker#0 p0.289,-5.896,1.436 r0,0,-0.359 s1,1,1 o-1 v1",
    "24 Mesh#2 p4,4,0.2 r0,0,0 s1,1,1 o0.375 v1",
    "25 attacker#0 p0.122,-6.341,1.5 r0,0,-0.359 s1,1,1 o-1 v1",
    "25 Mesh#2 p4,4,0.2 r0,0,0 s1,1,1 o0.25 v1",
    "26 Mesh#2 p4,4,0.2 r0,0,0 s1,1,1 o0.125 v1",
    "27 attacker#0 p0.259,-5.975,1.266 r0,0,-0.221 s1,1,1 o-1 v1",
    "27 Mesh#2 p4,4,0.2 r0,0,0 s1,1,1 o0 v1",
    "28 attacker#0 p0.561,-5.17,0.75 r0,0,-0.105 s1,1,1 o-1 v1",
    "29 attacker#0 p0.863,-4.366,0.234 r0,0,-0.027 s1,1,1 o-1 v1",
    "30 attacker#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "attacked.hideCardStats",
    "startTask#1",
    "startTask#2",
    "attacked.showCardStats",
    "scene.add(Mesh#2)",
    "scene.add(Mesh#3)",
    "scene.add(Mesh#4)",
    "startTask#3",
    "startTask#4",
    "startTask#5",
    "onCompleted",
    "scene.remove(Mesh#2)",
    "scene.remove(Mesh#3)",
    "scene.remove(Mesh#4)",
  ],
  "ticks": 34,
}
`;

exports[`duel-event choreography > attack on a face-up monster 1`] = `
{
  "completedAt": 31,
  "frames": [
    "0 attacker#0 p2,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "0 attacked#1 p3,4,0 r0,0,3.142 s1,1,1 o-1 v1",
    "1 attacker#0 p1.983,-4.139,0.084 r0,0,-0.038 s1,1,1 o-1 v1",
    "2 attacker#0 p1.936,-4.516,0.312 r0,0,-0.073 s1,1,1 o-1 v1",
    "3 attacker#0 p1.866,-5.072,0.648 r0,0,-0.101 s1,1,1 o-1 v1",
    "4 attacker#0 p1.782,-5.746,1.056 r0,0,-0.118 s1,1,1 o-1 v1",
    "5 attacker#0 p1.69,-6.481,1.5 r0,0,-0.124 s1,1,1 o-1 v1",
    "6 attacker#0 p1.598,-7.215,1.944 r0,0,-0.124 s1,1,1 o-1 v1",
    "7 attacker#0 p1.514,-7.89,2.352 r0,0,-0.124 s1,1,1 o-1 v1",
    "8 attacker#0 p1.444,-8.445,2.688 r0,0,-0.124 s1,1,1 o-1 v1",
    "9 attacker#0 p1.397,-8.822,2.916 r0,0,-0.124 s1,1,1 o-1 v1",
    "10 attacker#0 p1.38,-8.961,3 r0,0,-0.124 s1,1,1 o-1 v1",
    "12 attacker#0 p1.548,-7.613,2.688 r0,0,-0.124 s1,1,1 o-1 v1",
    "13 attacker#0 p1.95,-4.399,1.944 r0,0,-0.124 s1,1,1 o-1 v1",
    "14 attacker#0 p2.43,-0.562,1.056 r0,0,-0.124 s1,1,1 o-1 v1",
    "15 attacker#0 p2.832,2.652,0.312 r0,0,-0.124 s1,1,1 o-1 v1",
    "16 attacker#0 p3,4,0 r0,0,-0.124 s1,1,1 o-1 v1",
    "16 Mesh#2 p3,4,0.2 r0,0,0 s0,0,0 o0 v1",
    "16 Mesh#3 p3,4,0.1 r0,0,0 s0,0,0 o0 v1",
    "16 Mesh#4 p3,4,0.3 r0,0,-2.212 s0.5,0.5,0.5 o0 v1",
    "17 Mesh#2 p3,4,0.2 r0,0,0 s0.25,0.25,0.25 o0.25 v1",
    "17 Mesh#3 p3,4,0.1 r0,0,0 s0.333,0.333,0.333 o0.25 v1",
    "17 Mesh#4 p3,4,0.3 r0,0,-2.212 s0.667,0.667,0.667 o0.5 v1",
    "18 attacker#0 p2.944,3.55,0.064 r0,0,-0.124 s1,1,1 o-1 v1",
    "18 Mesh#2 p3,4,0.2 r0,0,0 s0.5,0.5,0.5 o0.5 v1",
    "18 Mesh#3 p3,4,0.1 r0,0,0 s0.667,0.667,0.667 o0.5 v1",
    "18 Mesh#4 p3,4,0.3 r0,0,-2.212 s0.833,0.833,0.833 o1 v1",
    "19 attacker#0 p2.795,2.362,0.234 r0,0,-0.124 s1,1,1 o-1 v1",
    "19 Mesh#2 p3,4,0.2 r0,0,0 s0.75,0.75,0.75 o0.5 v1",
    "19 Mesh#3 p3,4,0.1 r0,0,0 s1,1,1 o0.5 v1",
    "19 Mesh#4 p3,4,0.3 r0,0,-2.212 s1,1,1 o1 v1",
    "20 attacker#0 p2.585,0.684,0.475 r0,0,-0.124 s1,1,1 o-1 v1",
    "20 Mesh#2 p3,4,0.2 r0,0,0 s1,1,1 o0.5 v1",
    "20 Mesh#3 p3,4,0.1 r0,0,0 s1.125,1.125,1.125 o0.375 v1",
    "20 Mesh#4 p3,4,0.3 r0,0,-2.212 s0.75,0.75,0.75 o0.5 v1",
    "21 attacker#0 p2.345,-1.24,0.75 r0,0,-0.124 s1,1,1 o-1 v1",
    "21 Mesh#3 p3,4,0.1 r0,0,0 s1.25,1.25,1.25 o0.25 v1",
    "21 Mesh#4 p3,4,0.3 r0,0,-2.212 s0.5,0.5,0.5 o0 v1",
    "22 attacker#0 p2.104,-3.165,1.025 r0,0,-0.124 s1,1,1 o-1 v1",
    "22 Mesh#3 p3,4,0.1 r0,0,0 s1.375,1.375,1.375 o0.125 v1",
    "23 attacker#0 p1.895,-4.843,1.266 r0,0,-0.124 s1,1,1 o-1 v1",
    "23 Mesh#3 p3,4,0.1 r0,0,0 s1.5,1.5,1.5 o0 v1",
    "24 attacker#0 p1.746,-6.03,1.436 r0,0,-0.124 s1,1,1 o-1 v1",
    "24 Mesh#2 p3,4,0.2 r0,0,0 s1,1,1 o0.375 v1",
    "25 attacker#0 p1.69,-6.481,1.5 r0,0,-0.124 s1,1,1 o-1 v1",
    "25 Mesh#2 p3,4,0.2 r0,0,0 s1,1,1 o0.25 v1",
    "26 Mesh#2 p3,4,0.2 r0,0,0 s1,1,1 o0.125 v1",
    "27 attacker#0 p1.738,-6.093,1.266 r0,0,-0.077 s1,1,1 o-1 v1",
    "27 Mesh#2 p3,4,0.2 r0,0,0 s1,1,1 o0 v1",
    "28 attacker#0 p1.845,-5.24,0.75 r0,0,-0.036 s1,1,1 o-1 v1",
    "29 attacker#0 p1.952,-4.388,0.234 r0,0,-0.009 s1,1,1 o-1 v1",
    "30 attacker#0 p2,-4,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "startTask#1",
    "scene.add(Mesh#2)",
    "scene.add(Mesh#3)",
    "scene.add(Mesh#4)",
    "startTask#2",
    "startTask#3",
    "startTask#4",
    "onCompleted",
    "scene.remove(Mesh#2)",
    "scene.remove(Mesh#3)",
    "scene.remove(Mesh#4)",
  ],
  "ticks": 34,
}
`;

exports[`duel-event choreography > direct attack 1`] = `
{
  "completedAt": 31,
  "frames": [
    "0 attacker#0 p3,4,0 r0,0,3.142 s1,1,1 o-1 v1",
    "1 attacker#0 p3.034,4.136,0.084 r0,0,3.066 s1,1,1 o-1 v1",
    "2 attacker#0 p3.126,4.504,0.312 r0,0,2.998 s1,1,1 o-1 v1",
    "3 attacker#0 p3.262,5.048,0.648 r0,0,2.943 s1,1,1 o-1 v1",
    "4 attacker#0 p3.427,5.707,1.056 r0,0,2.909 s1,1,1 o-1 v1",
    "5 attacker#0 p3.606,6.425,1.5 r0,0,2.897 s1,1,1 o-1 v1",
    "6 attacker#0 p3.786,7.143,1.944 r0,0,2.897 s1,1,1 o-1 v1",
    "7 attacker#0 p3.951,7.803,2.352 r0,0,2.897 s1,1,1 o-1 v1",
    "8 attacker#0 p4.087,8.346,2.688 r0,0,2.897 s1,1,1 o-1 v1",
    "9 attacker#0 p4.179,8.715,2.916 r0,0,2.897 s1,1,1 o-1 v1",
    "10 attacker#0 p4.213,8.851,3 r0,0,2.897 s1,1,1 o-1 v1",
    "12 attacker#0 p3.775,7.098,2.688 r0,0,2.897 s1,1,1 o-1 v1",
    "13 attacker#0 p2.73,2.919,1.944 r0,0,2.897 s1,1,1 o-1 v1",
    "14 attacker#0 p1.483,-2.069,1.056 r0,0,2.897 s1,1,1 o-1 v1",
    "15 attacker#0 p0.438,-6.248,0.312 r0,0,2.897 s1,1,1 o-1 v1",
    "16 attacker#0 p0,-8,0 r0,0,2.897 s1,1,1 o-1 v1",
    "16 Mesh#1 p0,-8,0.2 r0,0,0 s0,0,0 o0 v1",
    "16 Mesh#2 p0,-8,0.1 r0,0,0 s0,0,0 o0 v1",
    "16 Mesh#3 p0,-8,0.3 r0,0,-2.212 s0.5,0.5,0.5 o0 v1",
    "17 Mesh#1 p0,-8,0.2 r0,0,0 s0.25,0.25,0.25 o0.25 v1",
    "17 Mesh#2 p0,-8,0.1 r0,0,0 s0.333,0.333,0.333 o0.25 v1",
    "17 Mesh#3 p0,-8,0.3 r0,0,-2.212 s0.667,0.667,0.667 o0.5 v1",
    "18 attacker#0 p0.155,-7.38,0.064 r0,0,2.897 s1,1,1 o-1 v1",
    "18 Mesh#1 p0,-8,0.2 r0,0,0 s0.5,0.5,0.5 o0.5 v1",
    "18 Mesh#2 p0,-8,0.1 r0,0,0 s0.667,0.667,0.667 o0.5 v1",
    "18 Mesh#3 p0,-8,0.3 r0,0,-2.212 s0.833,0.833,0.833 o1 v1",
    "19 attacker#0 p0.563,-5.746,0.234 r0,0,2.897 s1,1,1 o-1 v1",
    "19 Mesh#1 p0,-8,0.2 r0,0,0 s0.75,0.75,0.75 o0.5 v1",
    "19 Mesh#2 p0,-8,0.1 r0,0,0 s1,1,1 o0.5 v1",
    "19 Mesh#3 p0,-8,0.3 r0,0,-2.212 s1,1,1 o1 v1",
    "20 attacker#0 p1.141,-3.436,0.475 r0,0,2.897 s1,1,1 o-1 v1",
    "20 Mesh#1 p0,-8,0.2 r0,0,0 s1,1,1 o0.5 v1",
    "20 Mesh#2 p0,-8,0.1 r0,0,0 s1.125,1.125,1.125 o0.375 v1",
    "20 Mesh#3 p0,-8,0.3 r0,0,-2.212 s0.75,0.75,0.75 o0.5 v1",
    "21 attacker#0 p1.803,-0.787,0.75 r0,0,2.897 s1,1,1 o-1 v1",
    "21 Mesh#2 p0,-8,0.1 r0,0,0 s1.25,1.25,1.25 o0.25 v1",
    "21 Mesh#3 p0,-8,0.3 r0,0,-2.212 s0.5,0.5,0.5 o0 v1",
    "22 attacker#0 p2.465,1.861,1.025 r0,0,2.897 s1,1,1 o-1 v1",
    "22 Mesh#2 p0,-8,0.1 r0,0,0 s1.375,1.375,1.375 o0.125 v1",
    "23 attacker#0 p3.043,4.171,1.266 r0,0,2.897 s1,1,1 o-1 v1",
    "23 Mesh#2 p0,-8,0.1 r0,0,0 s1.5,1.5,1.5 o0 v1",
    "24 attacker#0 p3.451,5.806,1.436 r0,0,2.897 s1,1,1 o-1 v1",
    "24 Mesh#1 p0,-8,0.2 r0,0,0 s1,1,1 o0.375 v1",
    "25 attacker#0 p3.606,6.425,1.5 r0,0,2.897 s1,1,1 o-1 v1",
    "25 Mesh#1 p0,-8,0.2 r0,0,0 s1,1,1 o0.25 v1",
    "26 Mesh#1 p0,-8,0.2 r0,0,0 s1,1,1 o0.125 v1",
    "27 attacker#0 p3.512,6.046,1.266 r0,0,2.99 s1,1,1 o-1 v1",
    "27 Mesh#1 p0,-8,0.2 r0,0,0 s1,1,1 o0 v1",
    "28 attacker#0 p3.303,5.213,0.75 r0,0,3.07 s1,1,1 o-1 v1",
    "29 attacker#0 p3.095,4.379,0.234 r0,0,3.123 s1,1,1 o-1 v1",
    "30 attacker#0 p3,4,0 r0,0,3.142 s1,1,1 o-1 v1",
  ],
  "log": [
    "startTask#1",
    "scene.add(Mesh#1)",
    "scene.add(Mesh#2)",
    "scene.add(Mesh#3)",
    "startTask#2",
    "startTask#3",
    "startTask#4",
    "onCompleted",
    "scene.remove(Mesh#1)",
    "scene.remove(Mesh#2)",
    "scene.remove(Mesh#3)",
  ],
  "ticks": 34,
}
`;

exports[`duel-event choreography > fusion summon with two materials 1`] = `
{
  "completedAt": 67,
  "frames": [
    "0 material1#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Object3D#1 p4,-6.422,12.845 r0,0,0 s0,0,0 o-1 v1",
    "0 GameCard#2 p0,0,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Object3D#3 p-4,-6.422,12.845 r0,0,0 s0,0,0 o-1 v1",
    "0 Modal#4 p0,0,0 r0,0,0 s1,1,1 o1 v1",
    "0 Mesh#5 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "0 Mesh#6 p0,-6.422,12.345 r0,0,3.142 s1,1,1 o0.8 v1",
    "0 CardEmpty#7 p0,-6.422,12.895 r0,0,0 s1,1,1 o0 v1",
    "0 GameCard#8 p0,-6.372,12.845 r0,0,0 s1,1,1 o-1 v0",
    "0 Object3D#9 p0,-6.372,12.845 r0,0,0 s1,1,1 o-1 v0",
    "1 Object3D#1 p4,-6.422,12.845 r0,0,0 s0.333,0.333,0.333 o-1 v1",
    "1 Object3D#3 p-4,-6.422,12.845 r0,0,0 s0.333,0.333,0.333 o-1 v1",
    "1 Mesh#5 p0,-6.422,12.345 r0,0,0.628 s1,1,1 o0.8 v1",
    "1 Mesh#6 p0,-6.422,12.345 r0,0,-2.513 s1,1,1 o0.8 v1",
    "2 Object3D#1 p4,-6.422,12.845 r0,0,0 s0.667,0.667,0.667 o-1 v1",
    "2 Object3D#3 p-4,-6.422,12.845 r0,0,0 s0.667,0.667,0.667 o-1 v1",
    "2 Mesh#5 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "2 Mesh#6 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "3 Object3D#1 p4,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "3 Object3D#3 p-4,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "3 Mesh#5 p0,-6.422,12.345 r0,0,1.885 s1,1,1 o0.8 v1",
    "3 Mesh#6 p0,-6.422,12.345 r0,0,-1.257 s1,1,1 o0.8 v1",
    "4 Mesh#5 p0,-6.422,12.345 r0,0,2.513 s1,1,1 o0.8 v1",
    "4 Mesh#6 p0,-6.422,12.345 r0,0,-0.628 s1,1,1 o0.8 v1",
    "5 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s1,1,1 o0.8 v1",
    "5 Mesh#6 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "6 Mesh#5 p0,-6.422,12.345 r0,0,-2.513 s1,1,1 o0.8 v1",
    "6 Mesh#6 p0,-6.422,12.345 r0,0,0.628 s1,1,1 o0.8 v1",
    "7 Mesh#5 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "7 Mesh#6 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "8 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.94 v1",
    "8 Mesh#5 p0,-6.422,12.345 r0,0,-1.257 s1,1,1 o0.8 v1",
    "8 Mesh#6 p0,-6.422,12.345 r0,0,1.885 s1,1,1 o0.8 v1",
    "9 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.88 v1",
    "9 Mesh#5 p0,-6.422,12.345 r0,0,-0.628 s1,1,1 o0.8 v1",
    "9 Mesh#6 p0,-6.422,12.345 r0,0,2.513 s1,1,1 o0.8 v1",
    "10 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.82 v1",
    "10 Mesh#5 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "10 Mesh#6 p0,-6.422,12.345 r0,0,3.142 s1,1,1 o0.8 v1",
    "11 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.76 v1",
    "11 Mesh#5 p0,-6.422,12.345 r0,0,0.628 s1,1,1 o0.8 v1",
    "11 Mesh#6 p0,-6.422,12.345 r0,0,-2.513 s1,1,1 o0.8 v1",
    "12 Object3D#1 p2.507,-7.473,12.845 r0,0,0 s1,1,1 o-1 v1",
    "12 Object3D#3 p-2.507,-5.371,12.845 r0,0,0 s1,1,1 o-1 v1",
    "12 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "12 Mesh#5 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "12 Mesh#6 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "13 Object3D#1 p0.289,-6.718,12.845 r0,0,0 s1,1,1 o-1 v1",
    "13 Object3D#3 p-0.289,-6.126,12.845 r0,0,0 s1,1,1 o-1 v1",
    "13 Mesh#5 p0,-6.422,12.345 r0,0,1.885 s1,1,1 o0.8 v1",
    "13 Mesh#6 p0,-6.422,12.345 r0,0,-1.257 s1,1,1 o0.8 v1",
    "14 Object3D#1 p0.312,-5.33,12.845 r0,0,0 s1,1,1 o-1 v1",
    "14 Object3D#3 p-0.312,-7.515,12.845 r0,0,0 s1,1,1 o-1 v1",
    "14 Mesh#5 p0,-6.422,12.345 r0,0,2.513 s1,1,1 o0.8 v1",
    "14 Mesh#6 p0,-6.422,12.345 r0,0,-0.628 s1,1,1 o0.8 v1",
    "15 Object3D#1 p1.323,-5.793,12.845 r0,0,0 s1,1,1 o-1 v1",
    "15 Object3D#3 p-1.323,-7.051,12.845 r0,0,0 s1,1,1 o-1 v1",
    "15 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s1,1,1 o0.8 v1",
    "15 Mesh#6 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "16 Object3D#1 p1.068,-7.14,12.845 r0,0,0 s1,1,1 o-1 v1",
    "16 Object3D#3 p-1.068,-5.705,12.845 r0,0,0 s1,1,1 o-1 v1",
    "16 Mesh#5 p0,-6.422,12.345 r0,0,-2.513 s1,1,1 o0.8 v1",
    "16 Mesh#6 p0,-6.422,12.345 r0,0,0.628 s1,1,1 o0.8 v1",
    "17 Object3D#1 p-0.097,-7.535,12.845 r0,0,0 s1,1,1 o-1 v1",
    "17 Object3D#3 p0.097,-5.309,12.845 r0,0,0 s1,1,1 o-1 v1",
    "17 Mesh#5 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "17 Mesh#6 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "18 Object3D#1 p-0.838,-6.928,12.845 r0,0,0 s1,1,1 o-1 v1",
    "18 Object3D#3 p0.838,-5.917,12.845 r0,0,0 s1,1,1 o-1 v1",
    "18 Mesh#5 p0,-6.422,12.345 r0,0,-1.257 s1,1,1 o0.8 v1",
    "18 Mesh#6 p0,-6.422,12.345 r0,0,1.885 s1,1,1 o0.8 v1",
    "19 Object3D#1 p-0.795,-6.213,12.845 r0,0,0 s1,1,1 o-1 v1",
    "19 Object3D#3 p0.795,-6.631,12.845 r0,0,0 s1,1,1 o-1 v1",
    "19 Mesh#5 p0,-6.422,12.345 r0,0,-0.628 s1,1,1 o0.8 v1",
    "19 Mesh#6 p0,-6.422,12.345 r0,0,2.513 s1,1,1 o0.8 v1",
    "20 Object3D#1 p-0.392,-5.894,12.845 r0,0,0 s1,1,1 o-1 v1",
    "20 Object3D#3 p0.392,-6.951,12.845 r0,0,0 s1,1,1 o-1 v1",
    "20 Mesh#5 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "20 Mesh#6 p0,-6.422,12.345 r0,0,3.142 s1,1,1 o0.8 v1",
    "21 Object3D#1 p-0.039,-5.919,12.845 r0,0,0 s1,1,1 o-1 v1",
    "21 Object3D#3 p0.039,-6.925,12.845 r0,0,0 s1,1,1 o-1 v1",
    "21 Mesh#5 p0,-6.422,12.345 r0,0,0.628 s0.95,0.95,0.95 o0.76 v1",
    "21 Mesh#6 p0,-6.422,12.345 r0,0,-2.513 s0.95,0.95,0.95 o0.76 v1",
    "22 Object3D#1 p0.137,-6.078,12.845 r0,0,0 s1,1,1 o-1 v1",
    "22 Object3D#3 p-0.137,-6.767,12.845 r0,0,0 s1,1,1 o-1 v1",
    "22 Mesh#5 p0,-6.422,12.345 r0,0,1.257 s0.9,0.9,0.9 o0.72 v1",
    "22 Mesh#6 p0,-6.422,12.345 r0,0,-1.885 s0.9,0.9,0.9 o0.72 v1",
    "22 CardEmpty#7 p0,-6.422,12.895 r0,0,0 s1,1,1 o0.333 v1",
    "23 Object3D#1 p0.175,-6.23,12.845 r0,0,0 s1,1,1 o-1 v1",
    "23 Object3D#3 p-0.175,-6.615,12.845 r0,0,0 s1,1,1 o-1 v1",
    "23 Mesh#5 p0,-6.422,12.345 r0,0,1.885 s0.85,0.85,0.85 o0.68 v1",
    "23 Mesh#6 p0,-6.422,12.345 r0,0,-1.257 s0.85,0.85,0.85 o0.68 v1",
    "23 CardEmpty#7 p0,-6.422,12.895 r0,0,0 s1,1,1 o0.667 v1",
    "24 Object3D#1 p0.148,-6.331,12.845 r0,0,0 s1,1,1 o-1 v1",
    "24 Object3D#3 p-0.148,-6.514,12.845 r0,0,0 s1,1,1 o-1 v1",
    "24 Mesh#5 p0,-6.422,12.345 r0,0,2.513 s0.8,0.8,0.8 o0.64 v1",
    "24 Mesh#6 p0,-6.422,12.345 r0,0,-0.628 s0.8,0.8,0.8 o0.64 v1",
    "24 CardEmpty#7 p0,-6.422,12.895 r0,0,0 s1,1,1 o1 v1",
    "25 Object3D#1 p0.103,-6.385,12.845 r0,0,0 s1,1,1 o-1 v1",
    "25 Object3D#3 p-0.103,-6.459,12.845 r0,0,0 s1,1,1 o-1 v1",
    "25 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.75,0.75,0.75 o0.6 v1",
    "25 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.75,0.75,0.75 o0.6 v1",
    "26 Object3D#1 p0.062,-6.41,12.845 r0,0,0 s1,1,1 o-1 v1",
    "26 Object3D#3 p-0.062,-6.435,12.845 r0,0,0 s1,1,1 o-1 v1",
    "26 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.7,0.7,0.7 o0.56 v1",
    "26 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.7,0.7,0.7 o0.56 v1",
    "27 Object3D#1 p0.032,-6.419,12.845 r0,0,0 s1,1,1 o-1 v1",
    "27 Object3D#3 p-0.032,-6.426,12.845 r0,0,0 s1,1,1 o-1 v1",
    "27 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.65,0.65,0.65 o0.52 v1",
    "27 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.65,0.65,0.65 o0.52 v1",
    "28 Object3D#1 p0.014,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "28 Object3D#3 p-0.014,-6.423,12.845 r0,0,0 s1,1,1 o-1 v1",
    "28 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.6,0.6,0.6 o0.48 v1",
    "28 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.6,0.6,0.6 o0.48 v1",
    "29 Object3D#1 p0.004,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "29 Object3D#3 p-0.004,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "29 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.55,0.55,0.55 o0.44 v1",
    "29 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.55,0.55,0.55 o0.44 v1",
    "30 Object3D#1 p0.001,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "30 Object3D#3 p-0.001,-6.422,12.845 r0,0,0 s1,1,1 o-1 v1",
    "30 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.5,0.5,0.5 o0.4 v1",
    "30 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.5,0.5,0.5 o0.4 v1",
    "31 Object3D#1 p0,-6.422,12.845 r0,0,0 s1,1,1 o-1 v0",
    "31 Object3D#3 p0,-6.422,12.845 r0,0,0 s1,1,1 o-1 v0",
    "31 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.45,0.45,0.45 o0.36 v1",
    "31 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.45,0.45,0.45 o0.36 v1",
    "31 CardEmpty#7 p0,-6.422,12.895 r0,0,0 s1,1,1 o0.5 v1",
    "31 Object3D#9 p0,-6.372,12.845 r0,0,0 s1,1,1 o-1 v1",
    "32 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.4,0.4,0.4 o0.32 v1",
    "32 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.4,0.4,0.4 o0.32 v1",
    "32 CardEmpty#7 p0,-6.422,12.895 r0,0,0 s1,1,1 o0 v1",
    "33 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.35,0.35,0.35 o0.28 v1",
    "33 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.35,0.35,0.35 o0.28 v1",
    "34 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.3,0.3,0.3 o0.24 v1",
    "34 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.3,0.3,0.3 o0.24 v1",
    "35 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.25,0.25,0.25 o0.2 v1",
    "35 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.25,0.25,0.25 o0.2 v1",
    "36 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.2,0.2,0.2 o0.16 v1",
    "36 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.2,0.2,0.2 o0.16 v1",
    "37 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.15,0.15,0.15 o0.12 v1",
    "37 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.15,0.15,0.15 o0.12 v1",
    "38 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.1,0.1,0.1 o0.08 v1",
    "38 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.1,0.1,0.1 o0.08 v1",
    "39 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0.05,0.05,0.05 o0.04 v1",
    "39 Mesh#6 p0,-6.422,12.345 r0,0,0 s0.05,0.05,0.05 o0.04 v1",
    "40 Mesh#5 p0,-6.422,12.345 r0,0,3.142 s0,0,0 o0 v1",
    "40 Mesh#6 p0,-6.422,12.345 r0,0,0 s0,0,0 o0 v1",
    "57 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.467 v1",
    "57 Object3D#9 p0.2,-6.135,11.56 r0,0,0 s1,1,1 o-1 v1",
    "58 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0.233 v1",
    "58 Object3D#9 p0.4,-5.898,10.276 r0,0,0 s1,1,1 o-1 v1",
    "59 Modal#4 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "59 Object3D#9 p0.6,-5.661,8.991 r0,0,0 s1,1,1 o-1 v1",
    "60 Object3D#9 p0.8,-5.423,7.707 r0,0,0 s1,1,1 o-1 v1",
    "61 Object3D#9 p1,-5.186,6.422 r0,0,0 s1,1,1 o-1 v1",
    "62 Object3D#9 p1.2,-4.949,5.138 r0,0,0 s1,1,1 o-1 v1",
    "63 Object3D#9 p1.4,-4.712,3.853 r0,0,0 s1,1,1 o-1 v1",
    "64 Object3D#9 p1.6,-4.474,2.569 r0,0,0 s1,1,1 o-1 v1",
    "65 Object3D#9 p1.8,-4.237,1.284 r0,0,0 s1,1,1 o-1 v1",
    "66 Object3D#9 p2,-4,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "material1.hideCardStats",
    "zone M:0:1.setCard(null)",
    "overlay.add(Object3D#1)",
    "new GameCard(12)",
    "card.destroy",
    "overlay.add(Object3D#3)",
    "scene.add(Modal#4)",
    "startTask#1",
    "updateHand(0)",
    "deck0.updateDeck",
    "extra0.updateExtraDeck",
    "startTask#2",
    "startTask#3",
    "overlay.add(Mesh#5)",
    "overlay.add(Mesh#6)",
    "overlay.add(CardEmpty#7)",
    "enableRenderOverlay",
    "startTask#4",
    "startTask#5",
    "startTask#6",
    "startTask#7",
    "new GameCard(30)",
    "overlay.add(Object3D#9)",
    "startTask#8",
    "createCardPopSummonEffectSequence",
    "playSound(/sounds/extra_deck_summon.ogg,0.8)",
    "scene.remove(CardEmpty#7)",
    "scene.remove(Modal#4)",
    "zone M:0:2.setGameCard",
    "zone M:0:2.updateCard",
    "clearSceneOverlay",
    "onCompleted",
  ],
  "ticks": 69,
}
`;

exports[`duel-event choreography > fusion summon without materials 1`] = `
{
  "completedAt": 46,
  "frames": [
    "0 Modal#0 p0,0,0 r0,0,0 s1,1,1 o1 v1",
    "0 Mesh#1 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "0 Mesh#2 p0,-6.422,12.345 r0,0,3.142 s1,1,1 o0.8 v1",
    "0 CardEmpty#3 p0,-6.422,12.895 r0,0,0 s1,1,1 o0 v1",
    "0 GameCard#4 p0,-6.372,12.845 r0,0,0 s1,1,1 o-1 v0",
    "0 Object3D#5 p0,-6.372,12.845 r0,0,0 s1,1,1 o-1 v0",
    "1 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "1 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "2 Mesh#1 p0,-6.422,12.345 r0,0,2.513 s1,1,1 o0.8 v1",
    "2 Mesh#2 p0,-6.422,12.345 r0,0,-0.628 s1,1,1 o0.8 v1",
    "3 Mesh#1 p0,-6.422,12.345 r0,0,-2.513 s1,1,1 o0.8 v1",
    "3 Mesh#2 p0,-6.422,12.345 r0,0,0.628 s1,1,1 o0.8 v1",
    "4 Mesh#1 p0,-6.422,12.345 r0,0,-1.257 s1,1,1 o0.8 v1",
    "4 Mesh#2 p0,-6.422,12.345 r0,0,1.885 s1,1,1 o0.8 v1",
    "5 Mesh#1 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "5 Mesh#2 p0,-6.422,12.345 r0,0,-3.142 s1,1,1 o0.8 v1",
    "6 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "6 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "7 Mesh#1 p0,-6.422,12.345 r0,0,2.513 s1,1,1 o0.8 v1",
    "7 Mesh#2 p0,-6.422,12.345 r0,0,-0.628 s1,1,1 o0.8 v1",
    "8 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.94 v1",
    "8 Mesh#1 p0,-6.422,12.345 r0,0,-2.513 s1,1,1 o0.8 v1",
    "8 Mesh#2 p0,-6.422,12.345 r0,0,0.628 s1,1,1 o0.8 v1",
    "8 CardEmpty#3 p0,-6.422,12.895 r0,0,0 s1,1,1 o0.333 v1",
    "9 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.88 v1",
    "9 Mesh#1 p0,-6.422,12.345 r0,0,-1.257 s1,1,1 o0.8 v1",
    "9 Mesh#2 p0,-6.422,12.345 r0,0,1.885 s1,1,1 o0.8 v1",
    "9 CardEmpty#3 p0,-6.422,12.895 r0,0,0 s1,1,1 o0.667 v1",
    "10 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.82 v1",
    "10 Mesh#1 p0,-6.422,12.345 r0,0,0 s1,1,1 o0.8 v1",
    "10 Mesh#2 p0,-6.422,12.345 r0,0,-3.142 s1,1,1 o0.8 v1",
    "10 CardEmpty#3 p0,-6.422,12.895 r0,0,0 s1,1,1 o1 v1",
    "10 Object3D#5 p0,-6.372,12.845 r0,0,0 s1,1,1 o-1 v1",
    "11 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.76 v1",
    "11 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s1,1,1 o0.8 v1",
    "11 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s1,1,1 o0.8 v1",
    "12 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.7 v1",
    "17 CardEmpty#3 p0,-6.422,12.895 r0,0,0 s1,1,1 o0.5 v1",
    "18 CardEmpty#3 p0,-6.422,12.895 r0,0,0 s1,1,1 o0 v1",
    "21 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.95,0.95,0.95 o0.76 v1",
    "21 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.95,0.95,0.95 o0.76 v1",
    "22 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.9,0.9,0.9 o0.72 v1",
    "22 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.9,0.9,0.9 o0.72 v1",
    "23 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.85,0.85,0.85 o0.68 v1",
    "23 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.85,0.85,0.85 o0.68 v1",
    "24 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.8,0.8,0.8 o0.64 v1",
    "24 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.8,0.8,0.8 o0.64 v1",
    "25 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.75,0.75,0.75 o0.6 v1",
    "25 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.75,0.75,0.75 o0.6 v1",
    "26 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.7,0.7,0.7 o0.56 v1",
    "26 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.7,0.7,0.7 o0.56 v1",
    "27 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.65,0.65,0.65 o0.52 v1",
    "27 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.65,0.65,0.65 o0.52 v1",
    "28 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.6,0.6,0.6 o0.48 v1",
    "28 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.6,0.6,0.6 o0.48 v1",
    "29 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.55,0.55,0.55 o0.44 v1",
    "29 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.55,0.55,0.55 o0.44 v1",
    "30 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.5,0.5,0.5 o0.4 v1",
    "30 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.5,0.5,0.5 o0.4 v1",
    "31 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.45,0.45,0.45 o0.36 v1",
    "31 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.45,0.45,0.45 o0.36 v1",
    "32 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.4,0.4,0.4 o0.32 v1",
    "32 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.4,0.4,0.4 o0.32 v1",
    "33 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.35,0.35,0.35 o0.28 v1",
    "33 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.35,0.35,0.35 o0.28 v1",
    "34 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.3,0.3,0.3 o0.24 v1",
    "34 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.3,0.3,0.3 o0.24 v1",
    "35 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.25,0.25,0.25 o0.2 v1",
    "35 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.25,0.25,0.25 o0.2 v1",
    "36 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.467 v1",
    "36 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.2,0.2,0.2 o0.16 v1",
    "36 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.2,0.2,0.2 o0.16 v1",
    "36 Object3D#5 p0.2,-6.135,11.56 r0,0,0 s1,1,1 o-1 v1",
    "37 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0.233 v1",
    "37 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.15,0.15,0.15 o0.12 v1",
    "37 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.15,0.15,0.15 o0.12 v1",
    "37 Object3D#5 p0.4,-5.898,10.276 r0,0,0 s1,1,1 o-1 v1",
    "38 Modal#0 p0,0,0 r0,0,0 s1,1,1 o0 v1",
    "38 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.1,0.1,0.1 o0.08 v1",
    "38 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.1,0.1,0.1 o0.08 v1",
    "38 Object3D#5 p0.6,-5.661,8.991 r0,0,0 s1,1,1 o-1 v1",
    "39 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0.05,0.05,0.05 o0.04 v1",
    "39 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0.05,0.05,0.05 o0.04 v1",
    "39 Object3D#5 p0.8,-5.423,7.707 r0,0,0 s1,1,1 o-1 v1",
    "40 Mesh#1 p0,-6.422,12.345 r0,0,1.257 s0,0,0 o0 v1",
    "40 Mesh#2 p0,-6.422,12.345 r0,0,-1.885 s0,0,0 o0 v1",
    "40 Object3D#5 p1,-5.186,6.422 r0,0,0 s1,1,1 o-1 v1",
    "41 Object3D#5 p1.2,-4.949,5.138 r0,0,0 s1,1,1 o-1 v1",
    "42 Object3D#5 p1.4,-4.712,3.853 r0,0,0 s1,1,1 o-1 v1",
    "43 Object3D#5 p1.6,-4.474,2.569 r0,0,0 s1,1,1 o-1 v1",
    "44 Object3D#5 p1.8,-4.237,1.284 r0,0,0 s1,1,1 o-1 v1",
    "45 Object3D#5 p2,-4,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "scene.add(Modal#0)",
    "startTask#1",
    "updateHand(0)",
    "deck0.updateDeck",
    "extra0.updateExtraDeck",
    "overlay.add(Mesh#1)",
    "overlay.add(Mesh#2)",
    "overlay.add(CardEmpty#3)",
    "enableRenderOverlay",
    "startTask#2",
    "startTask#3",
    "startTask#4",
    "startTask#5",
    "new GameCard(30)",
    "overlay.add(Object3D#5)",
    "startTask#6",
    "createCardPopSummonEffectSequence",
    "playSound(/sounds/extra_deck_summon.ogg,0.8)",
    "scene.remove(CardEmpty#3)",
    "scene.remove(Modal#0)",
    "zone M:0:2.setGameCard",
    "zone M:0:2.updateCard",
    "clearSceneOverlay",
    "onCompleted",
  ],
  "ticks": 48,
}
`;

exports[`duel-event choreography > move card M-1 -> H-1 1`] = `
{
  "completedAt": 11,
  "frames": [
    "0 moving#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "0 handSlot#1 p0,-8,0 r0,0,0 s1,1,1 o-1 v0",
  ],
  "log": [
    "setSelectedCard(0,3,-)",
    "updateHand(0)",
    "renderHand(0)",
    "zone M:0:1.removeCard",
    "moving.hideCardStats",
    "playSound(/sounds/move.ogg,0.7)",
    "dispatch(close-ui-menu)",
    "startTask#1",
    "moving.destroy",
    "updateHand(0)",
    "updateExtraDeck(0)",
    "onCompleted",
  ],
  "ticks": 13,
}
`;

exports[`duel-event choreography > move card M-1 -> S-3 1`] = `
{
  "completedAt": 9,
  "frames": [
    "0 moving#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "1 moving#0 p1.25,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "2 moving#0 p1.5,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "3 moving#0 p1.75,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "4 moving#0 p2,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "5 moving#0 p2.25,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "6 moving#0 p2.5,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "7 moving#0 p2.75,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "8 moving#0 p3,-4,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "setSelectedCard(0,3,-)",
    "zone M:0:1.removeCard",
    "moving.hideCardStats",
    "playSound(/sounds/move.ogg,0.7)",
    "dispatch(close-ui-menu)",
    "startTask#1",
    "zone S:0:3.setGameCard",
    "updateHand(0)",
    "updateExtraDeck(0)",
    "onCompleted",
  ],
  "ticks": 11,
}
`;

exports[`duel-event choreography > move card M2-2 -> M2-4 1`] = `
{
  "completedAt": 9,
  "frames": [
    "0 moving#0 p1,-4,0 r0,0,0 s1,1,1 o-1 v1",
    "1 moving#0 p1.375,-3,0 r0,0,0.628 s1,1,1 o-1 v1",
    "2 moving#0 p1.75,-2,0 r0,0,1.257 s1,1,1 o-1 v1",
    "3 moving#0 p2.125,-1,0 r0,0,1.885 s1,1,1 o-1 v1",
    "4 moving#0 p2.5,0,0 r0,0,2.513 s1,1,1 o-1 v1",
    "5 moving#0 p2.875,1,0 r0,0,3.142 s1,1,1 o-1 v1",
    "6 moving#0 p3.25,2,0 r0,0,3.142 s1,1,1 o-1 v1",
    "7 moving#0 p3.625,3,0 r0,0,3.142 s1,1,1 o-1 v1",
    "8 moving#0 p4,4,0 r0,0,3.142 s1,1,1 o-1 v1",
  ],
  "log": [
    "setSelectedCard(1,3,-)",
    "zone M:1:2.removeCard",
    "moving.hideCardStats",
    "playSound(/sounds/move.ogg,0.7)",
    "dispatch(close-ui-menu)",
    "startTask#1",
    "zone M:1:4.setGameCard",
    "updateHand(0)",
    "updateExtraDeck(0)",
    "onCompleted",
  ],
  "ticks": 11,
}
`;

exports[`duel-event choreography > reveal a target from player 0's hand 1`] = `
{
  "completedAt": 36,
  "frames": [
    "0 handCard#0 p1,-8,0 r0,0,0 s1,1,1 o-1 v0",
    "0 GameCard#1 p1,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "0 Mesh#2 p1,-7,0.15 r0,0,0 s1,1,1 o0 v1",
    "0 Mesh#3 p1,-7,0.15 r0,0,0 s1,1,1 o0 v1",
    "3 GameCard#1 p1,-7.64,0.036 r0,0,0 s1,1,1 o-1 v1",
    "4 GameCard#1 p1,-7.36,0.064 r0,0,0 s1,1,1 o-1 v1",
    "5 GameCard#1 p1,-7.16,0.084 r0,0,0 s1,1,1 o-1 v1",
    "6 GameCard#1 p1,-7.04,0.096 r0,0,0 s1,1,1 o-1 v1",
    "7 GameCard#1 p1,-7,0.1 r0,0,0 s1,1,1 o-1 v1",
    "7 Mesh#2 p1,-7,0.15 r0,0,0 s1,1,1 o1 v1",
    "9 Mesh#2 p1,-7,0.15 r0,0,0 s1.08,1.08,1.08 o1 v1",
    "10 Mesh#2 p1,-7,0.15 r0,0,0 s1.16,1.16,1.16 o1 v1",
    "11 Mesh#2 p1,-7,0.15 r0,0,0 s1.24,1.24,1.24 o1 v1",
    "12 Mesh#2 p1,-7,0.15 r0,0,0 s1.32,1.32,1.32 o0.667 v1",
    "13 Mesh#2 p1,-7,0.15 r0,0,0 s1.4,1.4,1.4 o0.333 v1",
    "13 Mesh#3 p1,-7,0.15 r0,0,0 s1,1,1 o1 v1",
    "14 Mesh#2 p1,-7,0.15 r0,0,0 s1.4,1.4,1.4 o0 v1",
    "15 Mesh#3 p1,-7,0.15 r0,0,0 s1.08,1.08,1.08 o1 v1",
    "16 Mesh#3 p1,-7,0.15 r0,0,0 s1.16,1.16,1.16 o1 v1",
    "17 Mesh#3 p1,-7,0.15 r0,0,0 s1.24,1.24,1.24 o1 v1",
    "18 Mesh#3 p1,-7,0.15 r0,0,0 s1.32,1.32,1.32 o0.667 v1",
    "19 Mesh#3 p1,-7,0.15 r0,0,0 s1.4,1.4,1.4 o0.333 v1",
    "20 Mesh#3 p1,-7,0.15 r0,0,0 s1.4,1.4,1.4 o0 v1",
    "30 GameCard#1 p1,-7.36,0.064 r0,0,0 s1,1,1 o-1 v1",
    "31 GameCard#1 p1,-7.64,0.036 r0,0,0 s1,1,1 o-1 v1",
    "32 GameCard#1 p1,-7.84,0.016 r0,0,0 s1,1,1 o-1 v1",
    "33 GameCard#1 p1,-7.96,0.004 r0,0,0 s1,1,1 o-1 v1",
    "34 GameCard#1 p1,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "35 handCard#0 p1,-8,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "new GameCard(5)",
    "scene.add(Mesh#2)",
    "scene.add(Mesh#3)",
    "startTask#1",
    "startTask#2",
    "startTask#3",
    "scene.remove(Mesh#2)",
    "scene.remove(Mesh#3)",
    "card.destroy",
    "onCompleted",
  ],
  "ticks": 38,
}
`;

exports[`duel-event choreography > reveal a target from player 1's hand 1`] = `
{
  "completedAt": 56,
  "frames": [
    "0 handCard#0 p1,8,0 r0,3.142,3.142 s1,1,1 o-1 v0",
    "0 GameCard#1 p1,8,0 r0,3.142,3.142 s1,1,1 o-1 v1",
    "0 Mesh#2 p1,7,0.15 r0,0,0 s1,1,1 o0 v1",
    "0 Mesh#3 p1,7,0.15 r0,0,0 s1,1,1 o0 v1",
    "2 GameCard#1 p1,8,0 r-3.142,0,-0.597 s1,1,1 o-1 v1",
    "3 GameCard#1 p1,8,0 r3.142,0,-1.131 s1,1,1 o-1 v1",
    "4 GameCard#1 p1,8,0 r-3.142,0,-1.602 s1,1,1 o-1 v1",
    "5 GameCard#1 p1,8,0 r-3.142,0,-2.011 s1,1,1 o-1 v1",
    "6 GameCard#1 p1,8,0 r-3.142,0,-2.356 s1,1,1 o-1 v1",
    "7 GameCard#1 p1,8,0 r-3.142,0,-2.639 s1,1,1 o-1 v1",
    "8 GameCard#1 p1,8,0 r-3.142,0,-2.859 s1,1,1 o-1 v1",
    "9 GameCard#1 p1,8,0 r3.142,0,-3.016 s1,1,1 o-1 v1",
    "10 GameCard#1 p1,8,0 r3.142,0,-3.11 s1,1,1 o-1 v1",
    "11 GameCard#1 p1,8,0 r-3.142,0,-3.142 s1,1,1 o-1 v1",
    "13 GameCard#1 p1,7.64,0.036 r-3.142,1.131,-3.142 s1,1,1 o-1 v1",
    "14 GameCard#1 p1,7.36,0.064 r0,1.131,0 s1,1,1 o-1 v1",
    "15 GameCard#1 p1,7.16,0.084 r0,0.503,0 s1,1,1 o-1 v1",
    "16 GameCard#1 p1,7.04,0.096 r0,0.126,0 s1,1,1 o-1 v1",
    "16 Mesh#2 p1,7,0.15 r0,0,0 s1,1,1 o1 v1",
    "17 GameCard#1 p1,7,0.1 r0,0,0 s1,1,1 o-1 v1",
    "18 Mesh#2 p1,7,0.15 r0,0,0 s1.08,1.08,1.08 o1 v1",
    "19 Mesh#2 p1,7,0.15 r0,0,0 s1.16,1.16,1.16 o1 v1",
    "20 Mesh#2 p1,7,0.15 r0,0,0 s1.24,1.24,1.24 o1 v1",
    "21 Mesh#2 p1,7,0.15 r0,0,0 s1.32,1.32,1.32 o0.667 v1",
    "22 Mesh#2 p1,7,0.15 r0,0,0 s1.4,1.4,1.4 o0.333 v1",
    "22 Mesh#3 p1,7,0.15 r0,0,0 s1,1,1 o1 v1",
    "23 Mesh#2 p1,7,0.15 r0,0,0 s1.4,1.4,1.4 o0 v1",
    "24 Mesh#3 p1,7,0.15 r0,0,0 s1.08,1.08,1.08 o1 v1",
    "25 Mesh#3 p1,7,0.15 r0,0,0 s1.16,1.16,1.16 o1 v1",
    "26 Mesh#3 p1,7,0.15 r0,0,0 s1.24,1.24,1.24 o1 v1",
    "27 Mesh#3 p1,7,0.15 r0,0,0 s1.32,1.32,1.32 o0.667 v1",
    "28 Mesh#3 p1,7,0.15 r0,0,0 s1.4,1.4,1.4 o0.333 v1",
    "29 Mesh#3 p1,7,0.15 r0,0,0 s1.4,1.4,1.4 o0 v1",
    "39 GameCard#1 p1,7,0.1 r0,0.597,0 s1,1,1 o-1 v1",
    "40 GameCard#1 p1,7,0.1 r0,1.131,0 s1,1,1 o-1 v1",
    "41 GameCard#1 p1,7,0.1 r-3.142,1.539,-3.142 s1,1,1 o-1 v1",
    "42 GameCard#1 p1,7,0.1 r-3.142,1.131,-3.142 s1,1,1 o-1 v1",
    "43 GameCard#1 p1,7,0.1 r-3.142,0.785,-3.142 s1,1,1 o-1 v1",
    "44 GameCard#1 p1,7,0.1 r-3.142,0.503,-3.142 s1,1,1 o-1 v1",
    "45 GameCard#1 p1,7,0.1 r-3.142,0.283,-3.142 s1,1,1 o-1 v1",
    "46 GameCard#1 p1,7,0.1 r-3.142,0.126,-3.142 s1,1,1 o-1 v1",
    "47 GameCard#1 p1,7,0.1 r-3.142,0.031,-3.142 s1,1,1 o-1 v1",
    "48 GameCard#1 p1,7,0.1 r-3.142,0,-3.142 s1,1,1 o-1 v1",
    "50 GameCard#1 p1,7.36,0.064 r-3.142,0,-2.011 s1,1,1 o-1 v1",
    "51 GameCard#1 p1,7.64,0.036 r3.142,0,-1.131 s1,1,1 o-1 v1",
    "52 GameCard#1 p1,7.84,0.016 r-3.142,0,-0.503 s1,1,1 o-1 v1",
    "53 GameCard#1 p1,7.96,0.004 r-3.142,0,-0.126 s1,1,1 o-1 v1",
    "54 GameCard#1 p1,8,0 r-3.142,0,0 s1,1,1 o-1 v1",
    "55 handCard#0 p1,8,0 r0,3.142,3.142 s1,1,1 o-1 v1",
  ],
  "log": [
    "new GameCard(5)",
    "scene.add(Mesh#2)",
    "scene.add(Mesh#3)",
    "startTask#1",
    "startTask#2",
    "startTask#3",
    "scene.remove(Mesh#2)",
    "scene.remove(Mesh#3)",
    "card.destroy",
    "onCompleted",
  ],
  "ticks": 58,
}
`;

exports[`duel-event choreography > reveal from D flips the pile's top card 1`] = `
{
  "completedAt": 33,
  "frames": [
    "0 GameCard#0 p6,-4,0.6 r0,3.142,0 s1,1,1 o-1 v1",
    "1 GameCard#0 p6,-4,0.78 r0,3.142,0 s1,1,1 o-1 v1",
    "2 GameCard#0 p6,-4,0.96 r0,3.142,0 s1,1,1 o-1 v1",
    "3 GameCard#0 p6,-4,1.14 r0,3.142,0 s1,1,1 o-1 v1",
    "4 GameCard#0 p6,-4,1.32 r0,3.142,0 s1,1,1 o-1 v1",
    "5 GameCard#0 p6,-4,1.5 r-3.142,-0.785,-3.142 s1,1,1 o-1 v1",
    "6 GameCard#0 p6,-4,1.2 r0,-1.571,0 s1,1,1 o-1 v1",
    "7 GameCard#0 p6,-4,0.9 r0,-0.785,0 s1,1,1 o-1 v1",
    "8 GameCard#0 p6,-4,0.6 r0,0,0 s1,1,1 o-1 v1",
    "29 GameCard#0 p6,-4,1.05 r0,0,0 s1,1,1 o-1 v1",
    "30 GameCard#0 p6,-4,1.5 r0,0,0 s1,1,1 o-1 v1",
    "31 GameCard#0 p6,-4,1.2 r0,-1.047,0 s1,1,1 o-1 v1",
    "32 GameCard#0 p6,-4,0.9 r3.142,-1.047,3.142 s1,1,1 o-1 v1",
    "33 GameCard#0 p6,-4,0.6 r-3.142,0,-3.142 s1,1,1 o-1 v1",
  ],
  "log": [
    "new GameCard(5)",
    "startTask#1",
    "startTask#2",
    "playSound(/sounds/reveal.ogg,0.5)",
    "card.destroy",
    "onCompleted",
  ],
  "ticks": 35,
}
`;

exports[`duel-event choreography > reveal from ED2 flips the pile's top card 1`] = `
{
  "completedAt": 33,
  "frames": [
    "0 GameCard#0 p6,4,0.6 r0,3.142,0 s1,1,1 o-1 v1",
    "1 GameCard#0 p6,4,0.78 r0,3.142,0 s1,1,1 o-1 v1",
    "2 GameCard#0 p6,4,0.96 r0,3.142,0 s1,1,1 o-1 v1",
    "3 GameCard#0 p6,4,1.14 r0,3.142,0 s1,1,1 o-1 v1",
    "4 GameCard#0 p6,4,1.32 r0,3.142,0 s1,1,1 o-1 v1",
    "5 GameCard#0 p6,4,1.5 r-3.142,-0.785,-3.142 s1,1,1 o-1 v1",
    "6 GameCard#0 p6,4,1.2 r0,-1.571,0 s1,1,1 o-1 v1",
    "7 GameCard#0 p6,4,0.9 r0,-0.785,0 s1,1,1 o-1 v1",
    "8 GameCard#0 p6,4,0.6 r0,0,0 s1,1,1 o-1 v1",
    "29 GameCard#0 p6,4,1.05 r0,0,0 s1,1,1 o-1 v1",
    "30 GameCard#0 p6,4,1.5 r0,0,0 s1,1,1 o-1 v1",
    "31 GameCard#0 p6,4,1.2 r0,-1.047,0 s1,1,1 o-1 v1",
    "32 GameCard#0 p6,4,0.9 r3.142,-1.047,3.142 s1,1,1 o-1 v1",
    "33 GameCard#0 p6,4,0.6 r-3.142,0,-3.142 s1,1,1 o-1 v1",
  ],
  "log": [
    "new GameCard(5)",
    "startTask#1",
    "startTask#2",
    "playSound(/sounds/reveal.ogg,0.5)",
    "card.destroy",
    "onCompleted",
  ],
  "ticks": 35,
}
`;

exports[`duel-event choreography > reveal from hand shows the card to the camera 1`] = `
{
  "completedAt": 38,
  "frames": [
    "0 handCard#0 p1,-8,0 r0,0,0 s1,1,1 o-1 v0",
    "0 GameCard#1 p1,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "1 GameCard#1 p0.81,-6.48,1.14 r0,0,0 s1,1,1 o-1 v1",
    "2 GameCard#1 p0.64,-5.12,2.16 r0,0,0 s1,1,1 o-1 v1",
    "3 GameCard#1 p0.49,-3.92,3.06 r0,0,0 s1,1,1 o-1 v1",
    "4 GameCard#1 p0.36,-2.88,3.84 r0,0,0 s1,1,1 o-1 v1",
    "5 GameCard#1 p0.25,-2,4.5 r0,0,0 s1,1,1 o-1 v1",
    "6 GameCard#1 p0.16,-1.28,5.04 r0,0,0 s1,1,1 o-1 v1",
    "7 GameCard#1 p0.09,-0.72,5.46 r0,0,0 s1,1,1 o-1 v1",
    "8 GameCard#1 p0.04,-0.32,5.76 r0,0,0 s1,1,1 o-1 v1",
    "9 GameCard#1 p0.01,-0.08,5.94 r0,0,0 s1,1,1 o-1 v1",
    "10 GameCard#1 p0,0,6 r0,0,0 s1,1,1 o-1 v1",
    "32 GameCard#1 p0.36,-2.88,3.84 r0,0,0 s1,1,1 o-1 v1",
    "33 GameCard#1 p0.64,-5.12,2.16 r0,0,0 s1,1,1 o-1 v1",
    "34 GameCard#1 p0.84,-6.72,0.96 r0,0,0 s1,1,1 o-1 v1",
    "35 GameCard#1 p0.96,-7.68,0.24 r0,0,0 s1,1,1 o-1 v1",
    "36 GameCard#1 p1,-8,0 r0,0,0 s1,1,1 o-1 v1",
    "37 handCard#0 p1,-8,0 r0,0,0 s1,1,1 o-1 v1",
  ],
  "log": [
    "new GameCard(5)",
    "startTask#1",
    "card.destroy",
    "onCompleted",
  ],
  "ticks": 40,
}
`;
